--- a/containers/docker-existing-dockerfile/.devcontainer/devcontainer.json
+++ b/containers/docker-existing-dockerfile/.devcontainer/devcontainer.json
@@ -1,5 +1,5 @@
 {
-	"name": "Existing Dockerfile",
+	"name": "Cryptob3auty",
 
 	// Sets the run context to one level up instead of the .devcontainer folder.
 	"context": "..",
